--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             margin: 70px 0;
         }
         .rightSection img{
-               width:80%;
+               width:100%;
                align-items: center;
         }
         .purple{
@@ -98,7 +98,7 @@
                 <span id="element"></span>
             </div>
             <div class="rightSection">
-                <img src="bggg.jpg" alt="">
+                <img src="img002.jpg" alt="">
             </div>
         </section>
     </main>
