--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
             color: white;
             font-family: 'Poppins', sans-serif;
         }
+        .buttons .btn a{
+            color: white;
+            text-decoration: none;
+        }
     </style>
 </head>
 
@@ -133,8 +137,8 @@
                 <div>I am a passionate </div>
                 <span id="element"></span>
                 <div class="buttons">
-                    <button class="btn">Visit Github</button>
-                    <button class="btn">Visit LinkedIn</button>
+                    <button class="btn"><a href="https://github.com/BABU-BALAJI-V">Visit Github</a></button>
+                    <button class="btn"><a href="https://www.linkedin.com/in/babu-balaji-v-a3a11a253/">Visit LinkedIn</a></button>
                 </div>
             </div>
             <div class="rightSection">
