--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
             <div class="left">Balaji's Portfolio </div>
             <div class="right">
                 <ul>
-                    <li><a href="/">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="/">About</a></li>
-                    <li><a href="/">Resume</a></li>
+                    <li><a href="124003413_BABU_BALAJI_V.pdf">Resume</a></li>
                     <li><a href="/">Contact Me</a></li>
                 </ul>
             </div>
