--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="right">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="/">About</a></li>
+                    <li><a href="javascript: scrolltoId()">About</a></li>
                     <li><a href="124003413_BABU_BALAJI_V.pdf">Resume</a></li>
                     <li><a href="/">Contact Me</a></li>
                 </ul>
@@ -143,6 +143,16 @@
             </div>
             <div class="rightSection">
                 <img src="img002.jpg" alt="">
+            </div>
+        </section>
+        <section class="aboutSection">
+            <h1>About</h1>
+            <div id="about">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci sed quisquam aut nemo animi? Quos, quae blanditiis amet illo quaerat dolor animi soluta atque cumque, et, officia ullam officiis autem.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci sed quisquam aut nemo animi? Quos, quae blanditiis amet illo quaerat dolor animi soluta atque cumque, et, officia ullam officiis autem.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci sed quisquam aut nemo animi? Quos, quae blanditiis amet illo quaerat dolor animi soluta atque cumque, et, officia ullam officiis autem.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci sed quisquam aut nemo animi? Quos, quae blanditiis amet illo quaerat dolor animi soluta atque cumque, et, officia ullam officiis autem.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci sed quisquam aut nemo animi? Quos, quae blanditiis amet illo quaerat dolor animi soluta atque cumque, et, officia ullam officiis autem.
             </div>
         </section>
     </main>
@@ -172,6 +182,33 @@
             strings: ['Web Developer', 'Data Scientist'],
             typeSpeed: 50,
         });
+      function scrolltoId() {
+      var access = document.getElementById('about');
+      access.scrollIntoView({ behavior: 'smooth' }, true);
+    }   
+    var section = document.getElementById('about');
+    function isInViewport(element) {
+      var rect = element.getBoundingClientRect();
+      return (
+        rect.top >= 0 &&
+        rect.left >= 0 &&
+        rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
+        rect.right <= (window.innerWidth || document.documentElement.clientWidth)
+      );
+    }
+
+    function handleScroll() {
+      if (isInViewport(section)) {
+        section.classList.add('visible');
+      } else {
+        section.classList.remove('visible')
+    }}
+    window.addEventListener('scroll', handleScroll);
+    
+    function scrolltoId() {
+      var access = document.getElementById('about');
+      access.scrollIntoView({ behavior: 'smooth' }, true);
+    }
     </script>
 </body>
 
