--- a/index.html
+++ b/index.html
@@ -145,14 +145,16 @@
                 <img src="img002.jpg" alt="">
             </div>
         </section>
+        <hr/>
         <section class="aboutSection">
             <h1>About</h1>
             <div id="about">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci sed quisquam aut nemo animi? Quos, quae blanditiis amet illo quaerat dolor animi soluta atque cumque, et, officia ullam officiis autem.
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci sed quisquam aut nemo animi? Quos, quae blanditiis amet illo quaerat dolor animi soluta atque cumque, et, officia ullam officiis autem.
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci sed quisquam aut nemo animi? Quos, quae blanditiis amet illo quaerat dolor animi soluta atque cumque, et, officia ullam officiis autem.
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci sed quisquam aut nemo animi? Quos, quae blanditiis amet illo quaerat dolor animi soluta atque cumque, et, officia ullam officiis autem.
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci sed quisquam aut nemo animi? Quos, quae blanditiis amet illo quaerat dolor animi soluta atque cumque, et, officia ullam officiis autem.
+                
+                Hello there! I'm [Your Name], a passionate and disciplined college student pursuing 
+                my dreams in the field of Computer Science. Technology has always fascinated me, and 
+                I find immense joy in exploring the endless possibilities it offers. Here's a glimpse
+                 into my journey so far and what drives me to excel in this exciting domain.
+
             </div>
         </section>
     </main>
