--- a/index.html
+++ b/index.html
@@ -149,11 +149,8 @@
         <section class="aboutSection">
             <h1>About</h1>
             <div id="about">
-                
-                Hello there! I'm [Your Name], a passionate and disciplined college student pursuing 
-                my dreams in the field of Computer Science. Technology has always fascinated me, and 
-                I find immense joy in exploring the endless possibilities it offers. Here's a glimpse
-                 into my journey so far and what drives me to excel in this exciting domain.
+
+                Welcome to my portfolio! I'm a dedicated college student studying Computer Science with a burning passion for technology. I thrive on solving complex challenges and exploring the endless possibilities of code. Join me on this journey as we embrace innovation and strive to make a positive impact through cutting-edge projects. Let's shape the future together!
 
             </div>
         </section>
