--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@
             color: white;
             text-decoration: none;
         }
+        .aboutSection
+        {
+            display: flex;
+            padding: 23px 123px;
+        }
+        .aboutt{
+            padding: 23px 123px;
+        }
     </style>
 </head>
 
@@ -146,8 +154,9 @@
             </div>
         </section>
         <hr/>
+        <h1 class="aboutt">About</h1>
         <section class="aboutSection">
-            <h1>About</h1>
+            
             <div id="about">
 
                 Welcome to my portfolio! I'm a dedicated college student studying Computer Science with a burning passion for technology. I thrive on solving complex challenges and exploring the endless possibilities of code. Join me on this journey as we embrace innovation and strive to make a positive impact through cutting-edge projects. Let's shape the future together!
