--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <h3>Balaji's Developer Portfolio</h3>
             </div>
             <div class="footer-second">
-                
+                <img src="" alt="">
             </div>
             <div class="footer-third">
                 
