--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
         .aboutt{
             padding: 23px 123px;
         }
+        .footer-second{
+            padding: 23px;
+        }
     </style>
 </head>
 
@@ -170,7 +173,7 @@
                 <h3>Balaji's Developer Portfolio</h3>
             </div>
             <div class="footer-second">
-                <img src="" alt="">
+                
             </div>
             <div class="footer-third">
                 
